# granite-speech

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  release-gates.yml  smoke-base.yml  smoke-plus.yml
docs/: porting-from-whisper.md  release-checks.md
examples/: README.md  live_audio_pipecat.py  model_card_examples.md  pyproject.toml
granite_speech/: __init__.py  _models.py  audio.py  cache.py  chunking.py  cli.py  errors.py  loader.py  model.py  plus_output.py  prompts.py  reconciliation.py  segmenter.py  types.py  version.py  writers.py
granite_speech/_backends/: __init__.py  fake.py  llama_cpp.py  transformers.py
scripts/: check-built-artifacts.sh  fetch_ami_smoke_audio.py  smoke-testpypi.sh
tests/: test_audio.py  test_cache_and_models.py  test_chunking.py  test_cli.py  test_llama_cpp_backend.py  test_model_card_compat.py  test_model_fake_backend.py  test_readme_examples.py  test_real_weights_smoke.py  test_real_weights_smoke_plus.py  test_reconciliation.py  test_segmenter.py  test_types.py  test_whisper_compat_workflows.py  test_writers.py
tests/fixtures/: README.md
